SERVER-34172: Use noop writes to timestamp index completion/failure on primaries.